syntax = "proto3";

option go_package = "github.com/luzmareto/go-grpc-ecommerce-be/pb/common"; //import manual

// generated proto: protoc --go_out=./pb --go-grpc_out=./pb --proto_path=./proto --go_opt=paths=source_relative --go-grpc_opt=paths=source_relative common/base_response.proto

package common;

message ValidationError {
    string field = 1;
    string message= 2;
}

message BaseResponse {
    int64 status_code = 1;
    string message = 2;
    bool is_error = 3;
    repeated ValidationError validation_errors = 4;
}